# special

./: .claude-worktree-setup  .gitignore  .worktreeinclude  CLAUDE.md  LICENSE  README.md  TASKS.md  TypeO.sln  requirements.md
.claude/: settings.json
.claude-plugin/: plugin.json
docs/: GETTING_STARTED.md  code-review-checklist.md  evaluation-methodology.md  how-it-works.md  mathexpr-experiment-results.md  optimization-library-survey.md  research-note-skill-architecture.md  thesis.md  whenwords-experiment-results.md
experiments/: extract-tokens.py  mathexpr-cross-validate.py  mathexpr-extract-tokens-haiku.py  mathexpr-extract-tokens.py  optimize-skill-nelder-mead-experiment.md
grammar/: spec-il.ebnf.md
impls/: README.md
research/: README.md  additional-skill-candidates.md  evaluation-methodology.md  hypothesis.md  robotics-algorithm-analysis.md  robotics-implementation-roadmap.md  robotics-library-survey.md  robotics-node-graph.md  skill-architecture.md
research/experiments/sweep/runs/mathexpr-full-cpp-sonnet45/: CMakeLists.txt  README.md  agent-info.json  test-results.json
research/experiments/sweep/runs/mathexpr-full-cpp-sonnet45/include/: ast_types.h  evaluate.h  evaluator.h  parser.h  token_types.h  tokenizer.h
research/experiments/sweep/runs/mathexpr-full-cpp-sonnet45/src/: ast_types.cpp  evaluate.cpp  evaluator.cpp  parser.cpp  token_types.cpp  tokenizer.cpp
research/experiments/sweep/runs/mathexpr-full-cpp-sonnet45/tests/: test_ast_types.cpp  test_evaluate.cpp  test_evaluator.cpp  test_parser.cpp  test_token_types.cpp  test_tokenizer.cpp
research/experiments/sweep/runs/opt-medium-cpp-opus45/src/: CMakeLists.txt  bfgs.hpp  finite_diff.hpp  line_search.hpp  result_types.hpp  test_bfgs.cpp  test_finite_diff.cpp  test_line_search.cpp  test_result_types.cpp  test_vec_ops.cpp  vec_ops.hpp
research/experiments/sweep/runs/opt-medium-cpp-sonnet45/: CMakeLists.txt  agent-info.json  test-output.txt  test-results.json
research/experiments/sweep/runs/opt-medium-cpp-sonnet45/include/: bfgs.h  finite_diff.h  line_search.h  result_types.h  vec_ops.h
research/experiments/sweep/runs/opt-medium-cpp-sonnet45/src/: bfgs.cpp  finite_diff.cpp  line_search.cpp  result_types.cpp  vec_ops.cpp
research/experiments/sweep/runs/opt-medium-cpp-sonnet45/tests/: bfgs_test.cpp  finite_diff_test.cpp  line_search_test.cpp  result_types_test.cpp  vec_ops_test.cpp
research/experiments/sweep/runs/opt-small-cpp-sonnet45/: CMakeLists.txt  README.md  SUMMARY.md  TRANSLATION_NOTES.md  agent-info.json  build.sh  download_doctest.py  run_tests.py  test-results.json
research/experiments/sweep/runs/opt-small-cpp-sonnet45/include/: nelder_mead.h  result_types.h  vec_ops.h
research/experiments/sweep/runs/opt-small-cpp-sonnet45/src/: nelder_mead.cpp  result_types.cpp
research/experiments/sweep/runs/opt-small-cpp-sonnet45/tests/: test_nelder_mead.cpp  test_result_types.cpp  test_vec_ops.cpp
research/experiments/sweep/runs/whenwords-full-cpp-sonnet45/: CMakeLists.txt  README.md  agent-info.json  test-results.json
research/experiments/sweep/runs/whenwords-full-cpp-sonnet45/src/: date_range.cpp  date_range.h  duration.cpp  duration.h  human_date.cpp  human_date.h  parse_duration.cpp  parse_duration.h  time_ago.cpp  time_ago.h
research/experiments/sweep/runs/whenwords-full-cpp-sonnet45/tests/: date_range_test.cpp  duration_test.cpp  human_date_test.cpp  parse_duration_test.cpp  time_ago_test.cpp
scripts/: aggregate-benchmarks.py  check-links.sh  julia-validation.jl  setup-env.sh  validate-skill-structure.sh
tasks/: README.md  cpp-cross-validation.md  cross-validate-new-algorithms.md  implement-conjugate-gradient.md  (+6 more)
(+979 files in other folders)
